# RAG-full

./: .gitignore  README.md  pyproject.toml  requirements.txt
0-DataIngest/: 1-dataingestion.ipynb  2-pdfdataingestion.ipynb  3-docsdataingestion.ipynb  4-exceldataingestion.ipynb
0-DataIngest/data/Excelfiles/: Tsel Issue_Tracker_Updated13thNov_2025.xlsx  ~$Tsel Issue_Tracker_Updated13thNov_2025.xlsx
0-DataIngest/data/docfiles/: SampleDocFile.docx
0-DataIngest/data/textfiles/: doc1.txt  doc2.txt
0-DataIngest/json_doc_output/: Dimensionality Reduction for Network KPIs.json
1-vetorembeddingsandvectordb/: ComparisonofSentance.ipynb
2-chormadb/: 1-withChormadb.ipynb  doc_0.txt  doc_1.txt  doc_2.txt  doc_3.txt  doc_4.txt
2-chormadb/chromaDB/: chroma.sqlite3
3-InmemoryVector/: 1-withInmemory.ipynb
4-SemanticChunking/: 0-ProcessofSemanticChunking.ipynb
5-denseandsparsematrix/: 1-densesparse.ipynb
6-Reranking/: 1-rerankingbeforesendingtoLLM.ipynb  data.txt
6-Reranking/faiss_index/: index.faiss  index.pkl
7-LangGraph/: Chains.ipynb  Multi_tool_graph.ipynb  Router.ipynb  pydantic.ipynb
